[gd_scene load_steps=21 format=2]

[ext_resource path="res://Nodes/Player.gd" type="Script" id=1]
[ext_resource path="res://Art/potato.png" type="Texture" id=2]
[ext_resource path="res://Nodes/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Nodes/Gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/Light.png" type="Texture" id=5]
[ext_resource path="res://Art/Spark.png" type="Texture" id=6]
[ext_resource path="res://Nodes/Heart.tscn" type="PackedScene" id=7]
[ext_resource path="res://Art/Smoke.png" type="Texture" id=8]
[ext_resource path="res://Sounds/Footsteps.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 13 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/Gun:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/Gun:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.00592076, 1e-05 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/Gun:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 440872, 185364, 901250 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.576087, 0.7 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 11.47
gravity = Vector3( 0, 5, 0 )
initial_velocity = 29.41
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 32.36
scale = 0.8
scale_random = 1.0
scale_curve = SubResource( 6 )
color = Color( 0.105882, 0.105882, 0.105882, 1 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.451087, 0.7375 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 0, 2, 0 )
flag_disable_z = true
spread = 20.0
gravity = Vector3( 0, 5, 0 )
initial_velocity = 29.0
angular_velocity = 169.41
angular_velocity_random = 0.49
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 5.0
angle = 240.0
angle_random = 1.0
scale = 0.7
scale_curve = SubResource( 10 )
color = Color( 0, 0.25098, 0.866667, 1 )

[sub_resource type="GDScript" id=8]
script/source = "extends Node

onready var camera = get_parent()
var time = 0


func _shake(duration:= 0.8, magnitude:= 8) -> void:
	while time < duration:
		time += get_process_delta_time()
		time = min(time,duration)
		var offset = Vector2(0,0)
		offset.x = rand_range(-magnitude, magnitude)
		offset.y = rand_range(-magnitude, magnitude)
		camera.set_offset(offset)
		yield(get_tree(),\"idle_frame\")
	time = 0
	camera.set_offset(Vector2.ZERO)
"

[node name="Player" type="KinematicBody2D" groups=["player"]]
light_mask = 0
position = Vector2( -40, -3 )
z_index = 1
collision_mask = 14
script = ExtResource( 1 )
Bullet = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 56, 261 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 4
vframes = 4
region_rect = Rect2( -35.4635, -21.8232, 35.4635, 21.8232 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 55, 264 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="return_to_normal_color" type="Timer" parent="."]
wait_time = 0.32

[node name="invincibility" type="Timer" parent="."]
wait_time = 3.0

[node name="shot_pause" type="Timer" parent="."]
wait_time = 0.155

[node name="muzzle" type="Position2D" parent="."]
position = Vector2( 76, 262 )

[node name="Gun" parent="." instance=ExtResource( 4 )]
position = Vector2( 69, 264 )

[node name="audio" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 48, 231 )
scale = Vector2( 0.100098, 0.0952149 )
texture = ExtResource( 5 )
offset = Vector2( 67.4341, 333.457 )
texture_scale = 5.04
color = Color( 1, 0.980392, 0.67451, 0.435294 )
range_z_min = -1000
range_z_max = 1000
range_item_cull_mask = 2
shadow_enabled = true
shadow_item_cull_mask = 2

[node name="Dust" type="Particles2D" parent="."]
position = Vector2( 55, 277 )
emitting = false
amount = 3
lifetime = 0.4
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 6 )

[node name="Cape" type="Particles2D" parent="."]
position = Vector2( 55, 267 )
emitting = false
amount = 3
lifetime = 0.4
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 8 )

[node name="Hearts" type="Node2D" parent="."]
position = Vector2( 40, 3 )

[node name="Heart" parent="Hearts" instance=ExtResource( 7 )]
position = Vector2( 32, 32 )
z_index = 1

[node name="Heart2" parent="Hearts" instance=ExtResource( 7 )]
position = Vector2( 72, 32 )
z_index = 1

[node name="Heart3" parent="Hearts" instance=ExtResource( 7 )]
position = Vector2( 112, 32 )
z_index = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 360, 179 )
current = true
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 352
smoothing_enabled = true
smoothing_speed = 100.0

[node name="screen_shaker" type="Node" parent="Camera2D"]
script = SubResource( 8 )

[node name="footsteps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = 5.0

[connection signal="timeout" from="return_to_normal_color" to="." method="_on_return_to_normal_color_timeout"]
[connection signal="timeout" from="invincibility" to="." method="_on_invincibility_timeout"]
[connection signal="timeout" from="shot_pause" to="." method="_on_shot_pause_timeout"]
